Printer support phase 1 (uncollapse everything); Completion of tutorial map view list; fix yadif description (MPlayer instead of AviSynth); Included --nr option; fixed some images becomes invisible in dark mode

--- a/HTML/files/tutorial.css
+++ b/HTML/files/tutorial.css
@@ -296,6 +296,11 @@ a:active {
     border-radius: 1em;
     transition: 25ms;
 }
+a.disabled {
+  pointer-events: none;
+  cursor: default;
+  color: var(--hex-light-gray);
+}
 td.px-1.t-invert-light a { 
     color: whitesmoke;
     text-shadow: -0.3px 0 var(--hex-light-green), 0 0.3px var(--hex-light-green), 0.3px 0 var(--hex-light-green), 0 -0.3px var(--hex-light-green);
